# libkdtp

./: .gitignore  Makefile.am  configure.ac  libkdtp.pc.in
src/: dof.cc  kdtp.h  libkdtp.h  localpath.cc  poly.cc  spline.cc
